# external-benchmark

./: .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
config/: adjustment_profiles.yaml  anzsic_harmonisation_map.yaml  reality_check_bands.yaml  refresh_schedules.yaml  stress_scenarios.yaml
docs/: INDUSTRY_ANALYSIS_INTEGRATION_SPEC.md  adapter_pattern.md  migration_from_adjusted_to_raw.md  operations.md  pillar3_pdf_spec.md
examples/: full_pipeline_bank_vs_pc.py
ingestion/: __init__.py  apra_adi.py  asic_abs_import.py  base.py  cache_manager.py  downloader.py  icc_trade.py  industry_context.py  refresh.py  segment_mapping.yaml  source_registry.py  transform.py
output/: Credit_Risk_Report_Q2_2026.docx  Credit_Risk_Report_Q2_2026.md  README.md
outputs/: spot_check_verification.md
reports/: __init__.py  benchmark_report.py  environment_report.py  make_figures.py  render_environment_docx.py  render_environment_html.py  render_environment_md.py
scripts/: cleanup_and_reingest.py  generate_reports.py  migrate_collapse_cre_segments.py  migrate_commentary_values_to_null.py  migrate_definition_class_consistency.py  migrate_to_raw_observations.py  pick_spot_checks.py  sample_raw_report.py
src/: adjustments.py  benchmark_report.py  calibration_feed.py  csv_exporter.py  db.py  docx_helpers.py  downturn.py  governance.py  migrate_to_raw_observations.py  model_inputs.py  models.py  observations.py  reality_check.py  registry.py  run_all.py  seed_data.py  segment_glossary.py  source_naming.py  stress_scenarios.py  trend.py  triangulation.py  validation.py
tests/: test_adjustments.py  test_benchmark_report.py  test_calibration_feed.py  test_cli.py  test_csv_exporter.py  test_db.py  test_downturn.py  (+13 more)
(+154 files in other folders)
